Trying to address layout bug in Safari

--- a/_sass/modules/_forms.scss
+++ b/_sass/modules/_forms.scss
@@ -23,9 +23,10 @@ fieldset {
   padding: 0 0 .5rem 0;
   margin: 0rem 0 calc(2rem + 3px) 0;
   border-radius: 2px;
-  box-shadow: 0 0 5px 1px rgba(#000, .1);
   background: #fff;
   display: grid;
+  box-shadow: 0 1px 2px 1px rgba(#000, .05);
+
 }
 
 legend {
@@ -35,6 +36,7 @@ legend {
   width: 100%;
   font-size: 1.25rem;
   float: left;
+  background: #fff;
   position: relative;
   @include clearfix;
   border-bottom: 1px dotted $color-border-gray;
